[tool.poetry]
name = "bread_dog_bot"
version = "0.1.0"
description = "bread_dog_bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.6"
nonebot2 = "^2.0.0-beta.1"
Pillow = "^9.2.0"
nonebot-adapter-onebot = "^2.1.3"
nb-cli = "^0.6.7"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_gocqhttp"]
plugin_dirs = ["bread_dog_bot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
